testsuite/tests/parser/should_fail/readFailTraditionalRecords3.hs

{-# LANGUAGE NoTraditionalRecordSyntax #-}

module ReadFailTraditionalRecords3 where

f x = x { i = 3 }
